# probable-carnival

./: .isort.cfg  Makefile  init_db.py  pyproject.toml
config/: polls.yaml
polls/: db.py  main.py  middlewares.py  routes.py  views.py
polls/templates/: detail.html  index.html
