[tool.poetry]
name = "probable-carnival"
version = "0.1.0"
description = "aiohttp polls app"
authors = ["Abhishek Juneja <abhishek.juneja145@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.2"

[tool.poetry.dev-dependencies]
ipython = "^7.18.1"
bpython = "^0.20"
black = "^20.8b1"
pytest = "^6.1.2"
precommit = "^0.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
